UPDATE Renamed phpinfo => info

--- a/Resources/views/AdminTools/info.html.twig
+++ b/Resources/views/AdminTools/info.html.twig
@@ -1,13 +1,13 @@
 {% extends 'NSAdminBundle:Section:settings.html.twig' %}
 
 {% block content_header %}
-    <h3>Информация PHP</h3>
+    <h3>Информация о системе</h3>
 {% endblock %}
 
 {% block content_content %}
     <ul class="nav nav-tabs">
         <li class="active"><a href="#info-system" data-toggle="tab">Система</a></li>
-        <li><a href="#info-php" data-toggle="tab">PHP</a></li>
+        <li><a href="#info-php" data-toggle="tab">phpinfo</a></li>
     </ul>
     <div class="tab-content">
         <div class="tab-pane active" id="info-system">
