NEW Added admin submenu support

--- a/Resources/views/Generic/form.html.twig
+++ b/Resources/views/Generic/form.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
     <form method="post" {{ form_enctype(form) }} autocomplete="off">
-        {{ form_widget(form, {label: form_label }) }}
+        {{ form_widget(form, {label: form_label is defined ? form_label : '' }) }}
         <button class="btn btn-success">Сохранить</button>
     </form>
 {% endblock %}
