--- a/Resources/public/css/style.css
+++ b/Resources/public/css/style.css
@@ -1,5 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Allura);
-
 body {
 	position: relative;
 	padding-top: 40px;
@@ -10,20 +8,20 @@ form .control-group textarea {
 	width: 100%;
 }
 
-[class^="icon-"],
-[class*=" icon-"] {
-	background-image: url(/bundles/mopabootstrap/img/glyphicons-halflings.png) !important;
-}
-[class^="icon-white"],
-[class*=" icon-white"] {
-	background-image: url(/bundles/mopabootstrap/img/glyphicons-halflings-white.png) !important;
-}
-
 .loader {
-	background: url(/bundles/nsadmin/images/loader.gif);
-	height: 20px;
-	margin: 10px 10px 0 0;
-	width:20px;
+    background: #fff1b2;
+    border: solid 1px #ccc;
+    height: 20px;
+    margin-right: 10px;
+    overflow: hidden;
+    padding: 3px 5px;
+    position: fixed;
+    right: 0;
+    top: 50px;
+}
+.loader span {
+    font-size: 12px;
+    color: #777;
 }
 
 .multi-action {
@@ -51,10 +49,10 @@ form .control-group textarea {
 
 /*** SINCERELY ***/
 .ns-sincerely a {
-	font-family: 'Allura', cursive;
-	font-size: 20px;
-	background: url('/bundles/nsadmin/images/ns.png') no-repeat 100% 50%;
-	padding: 10px 55px 0 0;
+    opacity: 0.7;
+}
+.ns-sincerely a:hover {
+    opacity: 1;
 }
 
 /*** PHPINFO ***/
