--- a/Resources/views/Layout/base.html.twig
+++ b/Resources/views/Layout/base.html.twig
@@ -41,7 +41,7 @@
 
 <body data-spy="scroll" data-target=".bs-docs-sidebar">
 
-<div class="navbar navbar-inverse navbar-fixed-top" id="ns-navbar" style="background: red">
+<header class="navbar navbar-inverse navbar-fixed-top" id="ns-navbar" style="background: red">
     <div class="navbar-inner">
         <div class="container">
             <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -57,11 +57,11 @@
             </div>
 
 			<div class="nav-collapse collapse pull-right">
-				<div class="loader" id="ns-loader">&nbsp;</div>
+                
 			</div>
         </div>
     </div>
-</div>
+</header>
 
 <div class="container" style="margin-top: 30px">
     {% block content '' %}
@@ -71,7 +71,9 @@
     <hr/>
     <div class="container">
         <p class="pull-right ns-sincerely">
-			<a href="http://neosense.ru" target="_blank">Sincerely</a>
+			<a href="http://neosense.ru" target="_blank">
+                <img src="{{ asset('bundles/nsadmin/images/sincerely.png') }}" alt="Sincerely Neosense"/>
+			</a>
         </p>
 		{% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
 			{{ app.user.username }} |
@@ -82,6 +84,11 @@
 		({{ ns_core_version() }})
     </div>
 </footer>
+
+<div class="loader" id="ns-loader">
+    <img src="{{ asset('bundles/nsadmin/images/loader.gif') }}" alt=""/>
+    <span class="text">Загрузка...</span>
+</div>
 
 {% block foot_script %}
     {{ ns_cdn('bootstrap-2-js') }}
