--- a/Resources/public/css/style.css
+++ b/Resources/public/css/style.css
@@ -1,6 +1,6 @@
 body {
 	position: relative;
-	padding-top: 40px;
+	padding-top: 20px;
 }
 
 form .control-group textarea {
@@ -8,6 +8,7 @@ form .control-group textarea {
 	width: 100%;
 }
 
+/*** LOADER ***/
 .loader {
     background: #fff1b2;
     border: solid 1px #ccc;
@@ -22,6 +23,13 @@ form .control-group textarea {
 .loader span {
     font-size: 12px;
     color: #777;
+}
+
+/*** VERSION ***/
+footer .version {
+    opacity: 0.3;
+    font-size: 12px;
+    line-height: 15px;
 }
 
 .multi-action {
