UPDATE Dramatically improved footer and login dialog styles

--- a/Resources/public/css/style.css
+++ b/Resources/public/css/style.css
@@ -1,11 +1,42 @@
-body {
-	position: relative;
-	padding-top: 20px;
+html,body {
+    height: 100%;
 }
 
 form .control-group textarea {
 	height: 400px;
 	width: 100%;
+}
+
+/*** FOOTER PULL-DOWN ***/
+.ns-wrap {
+    min-height: 100%;
+}
+.ns-main {
+    overflow: auto;
+    padding: 40px 0 90px 0;
+}
+footer {
+    height: 45px;
+    position: relative;
+    margin-top: -90px;
+    overflow: hidden;
+}
+footer .container {
+    border-top: solid 1px #ddd;
+    overflow: hidden;
+    padding: 10px 0 0 0;
+}
+footer .version {
+    color: #ddd;
+    font-size: 12px;
+    line-height: 15px;
+}
+footer .version a {
+    color: #ddd;
+    text-decoration: underline;
+}
+footer .version a:hover {
+    color: #aaa;
 }
 
 /*** LOADER ***/
@@ -23,13 +54,6 @@ form .control-group textarea {
 .loader span {
     font-size: 12px;
     color: #777;
-}
-
-/*** VERSION ***/
-footer .version {
-    opacity: 0.3;
-    font-size: 12px;
-    line-height: 15px;
 }
 
 .multi-action {
@@ -108,3 +132,17 @@ footer .version {
     display: none;
 }
 
+/*** LOGIN ***/
+.ns-login {
+    border: solid 1px #ddd;
+    width: 410px;
+    left: 50%;
+    margin: -200px 0 0 -205px;
+    overflow: hidden;
+    padding: 30px;
+    position: absolute;
+    top: 50%;
+}
+.ns-login .submit {
+    text-align: right;
+}
