--- a/Resources/views/Layout/base.html.twig
+++ b/Resources/views/Layout/base.html.twig
@@ -39,68 +39,68 @@
 	{% endblock %}
 </head>
 
-<body data-spy="scroll" data-target=".bs-docs-sidebar">
+<body>
 
+<div class="ns-wrap">
+    <header class="navbar navbar-inverse navbar-fixed-top" id="ns-navbar" style="background: red">
+        <div class="navbar-inner">
+            <div class="container">
+                <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
 
-<header class="navbar navbar-inverse navbar-fixed-top" id="ns-navbar" style="background: red">
-    <div class="navbar-inner">
-        <div class="container">
-            <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
+                <div class="nav-collapse collapse">
+                    {% if is_granted("ROLE_ADMIN") %}
+                        {{ knp_menu_render('main', { currentClass: 'active', ancestorClass: 'active', template: 'NSAdminBundle:Menu:main-menu.html.twig', depth:1 }) }}
+                    {% endif %}
+                </div>
 
-            <div class="nav-collapse collapse">
-				{% if is_granted("ROLE_ADMIN") %}
-					{{ knp_menu_render('main', { currentClass: 'active', ancestorClass: 'active', template: 'NSAdminBundle:Menu:main-menu.html.twig', depth:1 }) }}
-				{% endif %}
+                <div class="nav-collapse collapse pull-right">
+                    {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                        <ul class="nav">
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                    <i class="icon-user icon-white"></i>&nbsp;{{ app.user.username }}&nbsp;<b class="caret"></b>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li>
+                                        <a href="{{ url('ns_admin_bundle', {adminBundle: 'NSUserBundle',adminController:'users',adminAction:'form'}) }}?id={{ app.user.id }}">
+                                            <i class="icon-cog"></i>&nbsp;Профиль
+                                        </a>
+                                    </li>
+                                    <li class="divider"></li>
+                                    <li>
+                                        <a href="{{ url('fos_user_security_logout') }}">
+                                            <i class="icon-off"></i>&nbsp;Выйти
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    {% endif %}
+                </div>
             </div>
-
-			<div class="nav-collapse collapse pull-right">
-                {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-                    <ul class="nav">
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <i class="icon-user icon-white"></i>&nbsp;{{ app.user.username }}&nbsp;<b class="caret"></b>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a href="{{ url('ns_admin_bundle', {adminBundle: 'NSUserBundle',adminController:'users',adminAction:'form'}) }}?id={{ app.user.id }}">
-                                        <i class="icon-cog"></i>&nbsp;Профиль
-                                    </a>
-                                </li>
-                                <li class="divider"></li>
-                                <li>
-                                    <a href="{{ url('fos_user_security_logout') }}">
-                                        <i class="icon-off"></i>&nbsp;Выйти
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                {% endif %}
-			</div>
         </div>
-    </div>
-</header>
+    </header>
 
-<div class="container" style="margin-top: 30px">
-    {% block content '' %}
+    <section class="container ns-main">
+        {% block content '' %}
+    </section>
 </div>
 
 <footer class="footer">
-    <hr/>
     <div class="container">
-        <p class="pull-right ns-sincerely">
+        <div class="pull-right ns-sincerely">
 			<a href="http://neosense.ru" target="_blank">
                 <img src="{{ asset('bundles/nsadmin/images/sincerely.png') }}" alt="Sincerely Neosense"/>
 			</a>
-        </p>
-		<p class="version">
-            &copy;&nbsp;ООО <a href="http://neosense.ru" target="_blank">«Неосенс»</a>, 2008—{{ 'now'|date('Y') }}<br/>
-            v{{ ns_core_version() }}, <a href="#">информация о системе</a>
-        </p>
+        </div>
+		<div class="pull-left version">
+            &copy;&nbsp;ООО <a href="http://neosense.ru" target="_blank">«Неосенс»</a> 2008—{{ 'now'|date('Y') }}<br/>
+            v{{ ns_core_version() }}, <a href="{{ url('ns_admin_bundle', {adminBundle: 'NSAdminBundle',adminController:'tools',adminAction:'info'}) }}">информация о системе</a>
+        </div>
     </div>
 </footer>
 
