--- a/Resources/views/Layout/base.html.twig
+++ b/Resources/views/Layout/base.html.twig
@@ -43,50 +43,50 @@
 
 <div class="ns-wrap">
     {% if is_granted("ROLE_ADMIN") %}
-    <header class="navbar navbar-inverse navbar-fixed-top" id="ns-navbar" style="background: red">
-        <div class="navbar-inner">
-            <div class="container">
-                <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
+        <header class="navbar navbar-inverse navbar-fixed-top" id="ns-navbar" style="background: red">
+            <div class="navbar-inner">
+                <div class="container">
+                    <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
 
-                <div class="nav-collapse collapse">
-                    {{ knp_menu_render('main', { currentClass: 'active', ancestorClass: 'active', template: 'NSAdminBundle:Menu:main-menu.html.twig', depth:1 }) }}
-                </div>
+                    <div class="nav-collapse collapse">
+                        {{ knp_menu_render('main', { currentClass: 'active', ancestorClass: 'active', template: 'NSAdminBundle:Menu:main-menu.html.twig', depth:1 }) }}
+                    </div>
 
-                <div class="nav-collapse collapse pull-right">
-                    {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-                        <ul class="nav">
-                            <li>
-                                <a href="{{ url('ns_cms_main') }}" target="_blank" title="Открыть сайт в новой вкладке"><i class="icon-share-alt icon-white"></i></a>
-                            </li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                    <i class="icon-user icon-white"></i>&nbsp;{{ app.user.username }}&nbsp;<b class="caret"></b>
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li>
-                                        <a href="{{ url('ns_admin_bundle', {adminBundle: 'NSUserBundle',adminController:'users',adminAction:'form'}) }}?id={{ app.user.id }}">
-                                            <i class="icon-cog"></i>&nbsp;Профиль
-                                        </a>
-                                    </li>
-                                    <li class="divider"></li>
-                                    <li>
-                                        <a href="{{ url('fos_user_security_logout') }}">
-                                            <i class="icon-off"></i>&nbsp;Выйти
-                                        </a>
-                                    </li>
-                                </ul>
-                            </li>
-                        </ul>
-                    {% endif %}
+                    <div class="nav-collapse collapse pull-right">
+                        {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                            <ul class="nav">
+                                <li>
+                                    <a href="{{ url('ns_cms_main') }}" target="_blank" title="Открыть сайт в новой вкладке"><i class="icon-share-alt icon-white"></i></a>
+                                </li>
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                        <i class="icon-user icon-white"></i>&nbsp;{{ app.user.username }}&nbsp;<b class="caret"></b>
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li>
+                                            <a href="{{ url('ns_admin_bundle', {adminBundle: 'NSUserBundle',adminController:'users',adminAction:'form'}) }}?id={{ app.user.id }}">
+                                                <i class="icon-cog"></i>&nbsp;Профиль
+                                            </a>
+                                        </li>
+                                        <li class="divider"></li>
+                                        <li>
+                                            <a href="{{ url('fos_user_security_logout') }}">
+                                                <i class="icon-off"></i>&nbsp;Выйти
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        {% endif %}
+                    </div>
                 </div>
             </div>
-        </div>
-    </header>
-
+            <div class="gradient"></div>
+        </header>
     {% endif %}
 
     <section class="container ns-main">
