--- a/Resources/public/css/style.css
+++ b/Resources/public/css/style.css
@@ -8,7 +8,7 @@ form .control-group textarea {
 }
 
 /*** HEADER ***/
-header .gradient {
+header .navbar-inner:after {
     width: 100%;
     height: 20px;
     position: absolute;
@@ -163,4 +163,37 @@ footer .version a:hover {
 .ns-login .alert {
     font-size: 14px;
     text-align: center;
+}
+
+/*** CATEGORY TREE ***/
+.ns-tree{
+    position: relative;
+}
+.ns-tree:before {
+    background: -moz-linear-gradient(left, rgba(245, 245, 245, 1) 0%, rgba(255, 255, 255, 0) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(245, 245, 245, 1)), color-stop(100%, rgba(255, 255, 255, 0))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(left, rgba(245, 245, 245, 1) 0%, rgba(255, 255, 255, 0) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(left, rgba(245, 245, 245, 1) 0%, rgba(255, 255, 255, 0) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(left, rgba(245, 245, 245, 1) 0%, rgba(255, 255, 255, 0) 100%); /* IE10+ */
+    background: linear-gradient(to right, rgba(245, 245, 245, 1) 0%, rgba(255, 255, 255, 0) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f5f5f5', endColorstr='#00ffffff', GradientType=1); /* IE6-9 */
+    height: 100%;
+    position: absolute;
+    width: 20px;
+    content: ''
+}
+.ns-tree:after {
+    background: -moz-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(245, 245, 245, 1) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(255, 255, 255, 0)), color-stop(100%, rgba(245, 245, 245, 1))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(245, 245, 245, 1) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(245, 245, 245, 1) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgba(245, 245, 245, 1) 100%); /* IE10+ */
+    background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(245, 245, 245, 1) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00ffffff', endColorstr='#f5f5f5', GradientType=1); /* IE6-9 */
+    height: 100%;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 20px;
+    content: ''
 }
