FIX Fixed bug with losing file field values

--- a/Resources/views/Form/fields.html.twig
+++ b/Resources/views/Form/fields.html.twig
@@ -212,7 +212,7 @@
             <script type="text/javascript">
                 (function($){
                     var iframe  = $('#{{ uid }}_iframe');
-                    var hidden  = $('#{{ uid }}');
+                    var hidden  = $('#{{ form.vars.id }}');
                     var input   = $('#{{ uid }}_input');
                     var trigger = $('#{{ uid }}_trigger');
                     var dialog  = $('#{{ uid }}_dialog');
