--- a/Resources/views/Layout/base.html.twig
+++ b/Resources/views/Layout/base.html.twig
@@ -53,7 +53,7 @@
                     </button>
 
                     <div class="nav-collapse collapse">
-                        {{ knp_menu_render('main', { currentClass: 'active', ancestorClass: 'active', template: 'NSAdminBundle:Menu:main-menu.html.twig', depth:1 }) }}
+                        {{ knp_menu_render('main', { currentClass: 'active', ancestorClass: 'active', template: 'NSAdminBundle:Menu:main-menu.html.twig' }) }}
                     </div>
 
                     <div class="nav-collapse collapse pull-right">
