--- a/Resources/views/Generic/form.html.twig
+++ b/Resources/views/Generic/form.html.twig
@@ -1,8 +1,3 @@
-{% extends 'NSAdminBundle::layout.html.twig' %}
+{% extends 'NSAdminBundle:Layout:col1-form.html.twig' %}
 
-{% block content %}
-    <form method="post" {{ form_enctype(form) }} autocomplete="off">
-        {{ form_widget(form, {label: form_label is defined ? form_label : '' }) }}
-        <button class="btn btn-success">Сохранить</button>
-    </form>
-{% endblock %}
+{# DEPRECATED Use NSAdminBundle:Layout:col1-form.html.twig instead #}
