--- a/Resources/views/Layout/base.html.twig
+++ b/Resources/views/Layout/base.html.twig
@@ -11,6 +11,7 @@
         {{ ns_cdn('bootstrap-2-css') }}
 
 		<link rel="stylesheet" href="{{ asset('bundles/nsadmin/css/style.css') }}" />
+		<link rel="stylesheet" href="{{ asset('bundles/nsadmin/css/animate.min.css') }}" />
 
 		<link rel="stylesheet" href="{{ asset('bundles/nsadmin/select2-3.4.5/select2.css') }}" />
 		<link rel="stylesheet" href="{{ asset('bundles/nsadmin/dynatree-bootstrap-skin/ui.dynatree.css') }}" />
