--- a/Resources/public/css/style.css
+++ b/Resources/public/css/style.css
@@ -10,6 +10,13 @@ form .control-group textarea {
 form .control-group .cke_reset {
 }
 
+form .controls .help- {
+    font-size: 12px;
+    display: block;
+    margin: -12px 0 0 0;
+    color: #b94a48;
+}
+
 .modal-large {
     width: 900px;
     margin-left: -450px;
@@ -298,4 +305,83 @@ footer .version a:hover {
     margin: -7px 0 0 16px;
 }
 
-
+/*** JQUERY DIALOGS ***/
+.ns-form-choice a.btn {
+    position: relative;
+    top: -5px;
+    left: 5px;
+}
+.ui-front {
+    z-index: 1050;
+}
+.ui-widget-overlay {
+    background: #fff;
+    opacity: 0.8;
+}
+.ui-dialog {
+    top: 10% !important;
+}
+.ui-dialog.large {
+    height: 80% !important;
+    left: 10% !important;
+    top: 10% !important;
+    width: 80% !important;
+}
+.ui-dialog .ui-dialog-titlebar {
+    background: #fff;
+    border: none;
+    margin-top: -40px;
+    z-index: 1;
+}
+.ui-dialog .ui-dialog-titlebar button {
+    margin-top: 27px;
+}
+.ui-dialog .ui-dialog-buttonpane {
+    position: absolute;
+    left:0;
+    right:0;
+    bottom:0;
+}
+.ns-dialog.ui-dialog .ui-dialog-buttonpane .ui-button {
+    display: inline-block;
+    padding: 4px 12px !important;
+    margin-bottom: 0;
+    font-size: 14px;
+    line-height: 20px;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    color: #333333;
+    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+    background-color: #f5f5f5;
+    background-image: -moz-linear-gradient(top, #ffffff, #e6e6e6);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#e6e6e6));
+    background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6);
+    background-image: -o-linear-gradient(top, #ffffff, #e6e6e6);
+    background-image: linear-gradient(to bottom, #ffffff, #e6e6e6);
+    background-repeat: repeat-x;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe6e6e6', GradientType=0);
+    border-color: #e6e6e6 #e6e6e6 #bfbfbf;
+    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+    filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+    border: 1px solid #cccccc;
+    border-bottom-color: #b3b3b3;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
+    -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
+    box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
+}
+.ns-dialog.ui-dialog .ui-dialog-buttonpane .ui-button:hover {
+    color: #333333;
+    text-decoration: none;
+    background-position: 0 -15px;
+    -webkit-transition: background-position 0.1s linear;
+    -moz-transition: background-position 0.1s linear;
+    -o-transition: background-position 0.1s linear;
+    transition: background-position 0.1s linear;
+}
+.ns-dialog .ui-button-text-only .ui-button-text {
+    padding: 0 !important;
+}
