--- a/Resources/views/Generic/form-api.html.twig
+++ b/Resources/views/Generic/form-api.html.twig
@@ -1,3 +1,6 @@
 <form method="post" {{ form_enctype(form) }} autocomplete="off">
+    {% if title is defined %}
+        <h3>{{ title }}</h3>
+    {% endif %}
 	{{ form_widget(form) }}
 </form>
